navbar fixed and alignments

--- a/fms/static/fms/css/base.css
+++ b/fms/static/fms/css/base.css
@@ -1,6 +1,3 @@
-/* =========================
-   GLOBAL RESET / BASE
-========================= */
 body {
     background-color: #f5f7f9;
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
@@ -18,8 +15,10 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
+    width: 100%;
     z-index: 1000;
 }
 
@@ -71,8 +70,9 @@ body {
    LAYOUT
 ========================= */
 .wrapper {
-    min-height: calc(100vh - 100px);
+    min-height: 100vh;
 }
+
 
 .page-header {
     display: flex;
